--- a/html/index.html
+++ b/html/index.html
@@ -14,7 +14,7 @@
 		<div id="div_runningTimers">
 			<input type="button" id="btn_StartTimers" value="Start" onClick="startTimers() ">
 			<input type="button" id="btn_PauseTimers" value="Pause" onClick="togglePause()">
-			<input type="button" id="btn_ResetTimers" value="Reset">
+			<input type="button" id="btn_ResetTimers" value="Reset" onClick="resetTimers()">
 			
 			<table id="tbl_timersRunning">
 				<tr>
