Changes to show timestamps for timers expired -- previous commit did not had the code change files

--- a/html/index.html
+++ b/html/index.html
@@ -31,11 +31,13 @@
 		</div>
 		<div id="div_exhaustedTimersInfo">
 			<hr/>
-			<table id="tbl_exhaustedTimersInfo" >
+			<table id="tbl_exhaustedTimersInfo" class="tbl_exhaustedTimersInfo">
 				<tr>
 					<th>#</th>
-					<th>Original </th>
+					<th>Original</th>
 					<th>Run Time</th>
+					<th>Time Stamp</th>
+					<th>Duration between time stamps</th>
 				</tr>
 			</table>
 		</div>
