20231113_2252 Integrated APM, Google Analytics, and updated ReadMe.md.

--- a/index.html
+++ b/index.html
@@ -5,6 +5,18 @@
 		<script type="text/javascript" src="scripts/jquery-3.4.1.js"></script>
 		<script type="text/javascript" src="scripts/webTimerScripts.js"></script>
 		<script type="text/javascript" src="scripts/defaultDataFile.js"></script>
+		<script type="text/javascript" src="scripts/apm.js"></script>
+
+		<!-- Google tag (gtag.js) -->
+		<script async src="https://www.googletagmanager.com/gtag/js?id=G-2NMG09W702"></script>
+		<script>
+			window.dataLayer = window.dataLayer || [];
+			function gtag(){dataLayer.push(arguments);}
+			gtag('js', new Date());
+
+			gtag('config', 'G-2NMG09W702');
+		</script>
+
 
 		<link rel = "stylesheet"    type = "text/css"    href = "css/web-countdown-timer-styles.css" />
 	</head>
